--- a/.github/workflows/download-projects.yml
+++ b/.github/workflows/download-projects.yml
@@ -2,7 +2,7 @@ name: Download projects
 
 on:
   schedule:
-    - cron: "28 2 1 2 *"
+    - cron: "32 3 1 2 *"
     # - cron: "59 5 8 3 *"
 
 jobs:
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GTIHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      TAG: master
+      TAG: main
 
     steps:
     - uses: actions/checkout@v2
