moved auth to personal access token - github token only works for current repo

--- a/.github/workflows/clone-repos.yml
+++ b/.github/workflows/clone-repos.yml
@@ -14,7 +14,7 @@ jobs:
 
     env:
       BRANCH: ${{ github.event.inputs.branch }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
 
     steps:
     - uses: actions/checkout@v2
