--- a/.github/workflows/clone-repos.yml
+++ b/.github/workflows/clone-repos.yml
@@ -31,5 +31,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: projects
-        path: |
-          **.zip
+        path: projects
