--- a/.github/workflows/clone-repos.yml
+++ b/.github/workflows/clone-repos.yml
@@ -3,9 +3,10 @@ name: Clone repos
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: Branch/Tag
+      ref:
+        description: Ref to clone (refs/heads/BRANCH, refs/tags/TAG or SHA)
         required: true
+        default: refs/heads/main
 
 jobs:
   execute:
@@ -23,7 +24,7 @@ jobs:
           python-version: 3.8
 
       - name: Clone repositories
-        run: python clone-repos.py -b ${{ github.event.inputs.branch }}
+        run: python clone-repos.py --ref ${{ github.event.inputs.ref }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
