--- a/.github/workflows/clone-repos.yml
+++ b/.github/workflows/clone-repos.yml
@@ -3,17 +3,16 @@ name: Clone repos
 on:
   workflow_dispatch:
     inputs:
-      ref:
-        description: Ref to clone (refs/heads/BRANCH, refs/tags/TAG or SHA)
+      branch:
+        description: Branch/Tag
         required: true
-        default: refs/heads/main
 
 jobs:
   execute:
     runs-on: ubuntu-latest
 
     env:
-      CLONE_REPOS_GITHUB_TOKEN: ${{ secrets.PAT }}
+      CLONE_REPOS_GITHUB_TOKEN: ${{ secrets.glo2003_clone_repos }}
 
     steps:
       - uses: actions/checkout@v2
@@ -24,12 +23,16 @@ jobs:
           python-version: 3.8
 
       - name: Clone repositories
-        run: python clone-repos.py --ref ${{ github.event.inputs.ref }}
+        run: python clone-repos.py -b ${{ github.event.inputs.branch }}
+
+      - run: |
+          ls -lha
+          ls -lha projects
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: projects
-          path: |
-            **.zip
-          # path: projects
+          # path: |
+          #   **.zip
+          path: projects
